[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/Block.gd" type="Script" id=1]
[ext_resource path="res://textures/blocks2X/bricks.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4, 4 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 4, 4 )

[sub_resource type="OccluderPolygon2D" id=3]
polygon = PoolVector2Array( -4, -4, -4, 4, 4, 4, 4, -4 )

[node name="Block" type="StaticBody2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
light_mask = 2
texture = ExtResource( 2 )
region_rect = Rect2( 0, 16, 8, 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="Tick" type="Timer" parent="."]
wait_time = 0.1

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
visible = false
position = Vector2( -2, -2 )
scale = Vector2( 0.2, 0.2 )
rect = Rect2( -10, -10, 40, 40 )

[node name="check" type="Timer" parent="."]

[node name="shade" type="Node2D" parent="."]
modulate = Color( 1, 1, 1, 0.521569 )

[node name="platform" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 2 )
one_way_collision = true

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource( 3 )

[connection signal="timeout" from="Tick" to="." method="_on_Tick_timeout"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="check" to="." method="_on_check_timeout"]
